card escritorio terminada

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div class="secc_two">
       <h3>      Monthly Subscription
       </h3>
-      <p class="card-precio">      &dollar;29 per month
-      </p>
+      <div class="card-precio"> &dollar;29</div>
+      <div class="precio_description">per month</div> 
       <p class="secc_two-description">
         Full access for less than &dollar;1 a day
-      Sign Up
       </p>
-      
+      <button type="button" class="button_card">Sign Up</button>
+
 
     </div>
     <div class="secc_three">
