card movil completa

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <header>    <h1 class="sr-only">Cars Cards</h1>
+  </header>
   <main class="content">
     <div class="secc_one">
       <h2>      Join our community
@@ -58,7 +59,7 @@
     </div>
   </main>
   
-  
+
   
 </body>
 </html>
