--- a/index.html
+++ b/index.html
@@ -1,65 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/index.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>    <h1 class="sr-only">Cars Cards</h1>
-  </header>
-  <main class="content">
-    <div class="secc_one">
-      <h2>      Join our community
-      </h2>
-      <p class="secc_one-subtitulo">
-        30-day, hassle-free money back guarantee
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-      </p>
-  <p class="secc_one-description">
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-</p>
- 
-    </div>
-    <div class="secc_two">
-      <h3>      Monthly Subscription
-      </h3>
-      <div class="card-precio"> &dollar;29</div>
-      <div class="precio_description">per month</div> 
-      <p class="secc_two-description">
-        Full access for less than &dollar;1 a day
-      </p>
-      <button type="button" class="button_card">Sign Up</button>
-
-
-    </div>
-    <div class="secc_three">
-      <h3>      Why Us
-      </h3>
-      <p class="secc_three-description">
-        Tutorials by industry experts
-        Peer &amp; expert code review
-        Coding exercises
-        Access to our GitHub repos
-        Community forum
-        Flashcard decks
-        New videos every week
-      </p>
- 
-    </div>
-  </main>
-  
-
-  
-</body>
+    <title>Frontend Mentor | Single Price Grid Component</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header><h1 class="sr-only">Cars Cards</h1></header>
+    <main class="content">
+      <div class="secc_one">
+        <h2>Join our community</h2>
+        <p class="secc_one-subtitulo">
+          30-day, hassle-free money back guarantee
+        </p>
+        <p class="secc_one-description">
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </div>
+      <div class="secc_two">
+        <h3>Monthly Subscription</h3>
+        <div class="card-precio">&dollar;29</div>
+        <div class="precio_description">per month</div>
+        <p class="secc_two-description">
+          Full access for less than &dollar;1 a day
+        </p>
+        <button type="button" class="button_card">Sign Up</button>
+      </div>
+      <div class="secc_three">
+        <h3>Why Us</h3>
+        <p class="secc_three-description">
+          Tutorials by industry experts Peer &amp; expert code review Coding
+          exercises Access to our GitHub repos Community forum Flashcard decks
+          New videos every week
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
